crates/ty_server/tests/e2e/snapshots/e2e__pull_diagnostics__unused_import_and_class_have_unnecessary_hint_tags.snap
---
source: crates/ty_server/tests/e2e/pull_diagnostics.rs
expression: diagnostics
---
{
  "kind": "full",
  "resultId": "[RESULT_ID]",
  "items": [
    {
      "range": {
        "start": {
          "line": 0,
          "character": 7
        },
        "end": {
          "line": 0,
          "character": 9
        }
      },
      "severity": 4,
      "source": "ty",
      "message": "`os` is imported but unused",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 1,
          "character": 16
        },
        "end": {
          "line": 1,
          "character": 20
        }
      },
      "severity": 4,
      "source": "ty",
      "message": "`path` is imported but unused",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 8,
          "character": 6
        },
        "end": {
          "line": 8,
          "character": 14
        }
      },
      "severity": 4,
      "source": "ty",
      "message": "Class `Internal` is unused",
      "tags": [
        1
      ]
    },
    {
      "range": {
        "start": {
          "line": 12,
          "character": 10
        },
        "end": {
          "line": 12,
          "character": 15
        }
      },
      "severity": 4,
      "source": "ty",
      "message": "Class `Local` is unused",
      "tags": [
        1
      ]
    }
  ]
}
