crates/ty_server/tests/e2e/snapshots/e2e__pull_diagnostics__workspace_reports_unused_import_and_class_hint_tags.snap
---
source: crates/ty_server/tests/e2e/pull_diagnostics.rs
expression: diagnostics
---
{
  "items": [
    {
      "kind": "full",
      "uri": "file://<temp_dir>/src/foo.py",
      "version": null,
      "resultId": "[RESULT_ID]",
      "items": [
        {
          "range": {
            "start": {
              "line": 0,
              "character": 7
            },
            "end": {
              "line": 0,
              "character": 9
            }
          },
          "severity": 4,
          "source": "ty",
          "message": "`os` is imported but unused",
          "tags": [
            1
          ]
        },
        {
          "range": {
            "start": {
              "line": 4,
              "character": 6
            },
            "end": {
              "line": 4,
              "character": 14
            }
          },
          "severity": 4,
          "source": "ty",
          "message": "Class `Internal` is unused",
          "tags": [
            1
          ]
        }
      ]
    }
  ]
}
